--- a/bs/index.html
+++ b/bs/index.html
@@ -24,12 +24,12 @@
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
     <link rel="manifest" href="assets/favicon/manifest.json">
     <meta property="og:title" content="">
-    <meta property="og:url" content="http://192.168.0.7:4000/bs/">
+    <meta property="og:url" content="https://bosniana.org/bs/">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
 
-    <link rel="canonical" href="http://192.168.0.7:4000/bs/">
+    <link rel="canonical" href="https://bosniana.org/bs/">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="/rss.xml">
 
     <meta property="og:url" content="https://bosniana.org/">
@@ -84,7 +84,7 @@
     </style>
 
 
-<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "http://192.168.0.7:4000",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "http://192.168.0.7:4000/bs/",                        "name": "OpenBosniana OS"                    }                }                    ]    }</script>
+<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org/bs",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/bs/bs/",                        "name": "OpenBosniana OS"                    }                }                    ]    }</script>
 
 
 </head>
@@ -100,11 +100,12 @@
         <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
             <p>Nedavne promjene</p>
-            <a href="https://bosniana.org/bs/blog/edu-112024/">Release Notes</a>
-            <a href="https://bosniana.org/bs/downloads/">Downloads</a>
+            <a href="https://bosniana.org/bs/blog/edu-112024/">Bilješke o izdanju | EDU</a>
+            <a href="https://bosniana.org/bs/blog/home-092024/">Bilješke o izdanju | HOME</a>
+            <a href="https://bosniana.org/bs/downloads/">Preuzimanja</a>
             <p></p>
-            <a href="https://bosniana.org/bs/wiki/installation-guide/" target="blank">Installation Guide</a>
-            <a href="https://bosniana.org/bs/wiki/">Documentation</a>
+            <a href="https://bosniana.org/bs/wiki/installation-guide/" target="blank">Vodič za instalaciju</a>
+            <a href="https://bosniana.org/bs/wiki/">Dokumentacija</a>
         </div>
     </button>
      <div class="container-fluid">
@@ -280,7 +281,7 @@
             </div>
 
             <div class="button-row-my mb-4 pb-2">
-                <a href="/bs/download/" class="btn bg-info text-dark">Preuzimanja</a>
+                <a href="/bs/downloads/" class="btn bg-info text-dark">Preuzimanja</a>
                 <a href="/bs/project/" class="btn bg-danger text-white">Saznajte više</a>
             </div>
         </div>
@@ -295,7 +296,7 @@
             <div class="col-md-6 ">
               <h4 class="text-info">Karakteristike</h4>
               <h2 class="nunito-dark">Jednostavno i lako</h2>
-              <p class="nunito-dark">Jednostavno preuzmite jednu od verzija, kreirajte USB flash disk za pokretanje i spremni ste. Dizajniran je da radi 'odmah iz kutije' i dolazi u potpunosti opremljen softverom i aplikacijama koje su potrebne većini korisnika.</p>
+              <p class="nunito-dark">Jednostavno preuzmite jednu od verzija, kreirajte USB flash disk za pokretanje i spremni ste. Dizajniran je da radi 'odmah po instalaciji' i dolazi u potpunosti opremljen softverom i aplikacijama koje su potrebne većini korisnika.</p>
             </div>
             <div class="col-md-6 shadow">
               <div class="p-1  mt-3">
@@ -370,8 +371,8 @@
                 <li class="list-unstyled">
                   <img src="/assets/img/home/apps.svg" class="mr-3" alt="Applications" width="32px">
                   <a href="##">Aplikacije</a>
-                  <p class="p-1">Različite verzije operativnog sistema dolaze s različitim zadanim aplikacijama i alatima. Pogledajte detaljnije koje aplikacije dolaze s željenom verzijom.:</p>
-                    <p class="text-info text-center">, , , </p>
+                  <p class="p-1">Različite verzije operativnog sistema dolaze s različitim zadanim aplikacijama i alatima. Pogledajte detaljnije koje aplikacije dolaze s željenom verzijom:</p>
+                    <p class="text-info text-center">Core, Home, Edu, Security</p>
               </div>
             </div>
           </div>
@@ -424,7 +425,7 @@
 <br><div class="bg-blog">
     <div class="container-fluid">
                 <div class="card-body mt-2 pt-2">
-                    <h2 class="card-title-b text-info-c"><span class="nunito-dark">Latest News</span></h2>
+                    <h2 class="card-title-b text-info-c"><span class="nunito-dark">Najnovije vijesti</span></h2>
                 </div>
 
     </div>
@@ -435,9 +436,9 @@
                 <div class="col-md-4 col-sm-6 col-12">
                     <div class="blog-grid-simple  bg-blog1">
                         <img src="/assets/img/project/edu.png" alt="OpenBosniana Edu KDE 112024">
-                        <h4>OpenBosniana Edu KDE 112024 release note</h4>
+                        <h4>OpenBosniana Edu KDE 112024 bilješke o izdanju</h4>
                         <div class="blog-grid-simple-linija"></div>
-                        <p>The latest version of the Edu KDE amd64 series. New ISOs. Many improvements</p>
+                        <p>Najnovija verzija serije Edu KDE amd64. Novi ISO. Mnoga poboljšanja...</p>
                         <div class="blog-grid-simple-content">
                             <div class="row blog-grid-simple-date color-danger">
                                 <div class="col-2 pr-0">
@@ -447,7 +448,7 @@
                                     <h5>2024/11/14</h5>
                                 </div>
                                 <div class="col-5 text-right">
-                                    <a href="/blog/edu-112024/" class="btn-info-c">Read on blog</a>
+                                    <a href="/bs/blog/edu-112024/" class="btn-info-c">Čitaj na blogu</a>
                                 </div>
                             </div>
                         </div>
@@ -457,9 +458,9 @@
                 <div class="col-md-4 col-sm-6 col-12">
                     <div class="blog-grid-simple  bg-blog1">
                         <img src="/assets/img/project/bg-home.png" alt="OpenBosniana Home KDE 092024">
-                        <h4>OpenBosniana Home KDE 092024 release note</h4>
+                        <h4>OpenBosniana Home KDE 092024 bilješke o izdanju</h4>
                         <div class="blog-grid-simple-linija"></div>
-                        <p>The latest version of the Home KDE amd64 series.</p>
+                        <p>Najnovija verzija serije Home KDE amd64. Poboljšane performanse u osnovnim aplikacijama...</p>
                         <div class="blog-grid-simple-content">
                             <div class="row blog-grid-simple-date color-danger">
                                 <div class="col-2 pr-0">
@@ -469,7 +470,7 @@
                                     <h5>2024/10/21</h5>
                                 </div>
                                 <div class="col-5 text-right">
-                                    <a href="/blog/home-092024/">Read on blog</a>
+                                    <a href="/bs/blog/home-092024/">Čitaj na blogu</a>
                                 </div>
                             </div>
                         </div>
@@ -480,9 +481,9 @@
                 <div class="col-md-4 col-sm-6 col-12">
                     <div class="blog-grid-simple bg-blog1">
                         <img src="/assets/img/project/default.jpg" alt="OpenBosniana Home XFCE 092024">
-                        <h4>OpenBosniana Home XFCE 092024 release note</h4>
+                        <h4>OpenBosniana Home XFCE 092024 bilješke o izdanju</h4>
                         <div class="blog-grid-simple-linija"></div>
-                        <p>Minor bugs fixed. Many improvements of the GUI. New ISOs.</p>
+                        <p>Ispravljene manje greške. Mnoga poboljšanja GUI-ja. Novi ISO.</p>
                         <div class="blog-grid-simple-content">
                             <div class="row blog-grid-simple-date color-danger">
                                 <div class="col-2 pr-0">
@@ -492,7 +493,7 @@
                                     <h5>2024/10/18</h5>
                                 </div>
                                 <div class="col-5 text-right">
-                                    <a href="/blog/xfce-092024/">Read on blog</a>
+                                    <a href="/bs/blog/xfce-092024/">Čitaj na blogu</a>
                                 </div>
                             </div>
                         </div>
@@ -503,7 +504,7 @@
         <!-- All News Link -->
         <div class="container-fluid center-block">
             <h2 class="text-center">
-                <a href="/blog/" class="btn bg-info text-white">ALL NEWS</a>
+                <a href="/bs/blog/" class="btn bg-info text-white">VIŠE VIJESTI</a>
             </h2>
         </div>
     </div>
@@ -513,9 +514,9 @@
 
             <div class="pb-2 pt-2">
                 <div class="card-body mt-2 pt-2">
-                    <h2 class="card-title-b text-info-c"><span class="nunito-dark">Recent Updates</span></h2>
+                    <h2 class="card-title-b text-info-c"><span class="nunito-dark">Nedavna ažuriranja</span></h2>
                     <p class="nunito-dark p-2 mt-2">
-                        Latest updated packages. View more<a href="packages/index.html"> here</a>.
+                        Najnoviji ažurirani paketi. Pogledaj više<a href="packages/index.html"> ovdje</a>.
                     </p>
                 </div>
 
@@ -524,9 +525,9 @@
                         <thead class="text-white bg-2">
                             <tr>
                                 <th scope="col">Arch</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Version</th>
-                                <th scope="col">Date</th>
+                                <th scope="col">Naziv</th>
+                                <th scope="col">Verzija</th>
+                                <th scope="col">Datum</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -606,7 +607,7 @@
                     </table>
                 </div><br>
                 <p class="text-center mb-2 mt-2">
-                    <a href="packages/index.html" class="btn-raised  shadow p-3">VIEW MORE</a>
+                    <a href="/bs/packages/" class="btn-raised  shadow p-3">VIDI VIŠE</a>
                 </p>
             </div>
         </div><br>
@@ -670,20 +671,28 @@
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
-													<a href="##">OpenBosniana OS</a> i
-													<a href="##">bosniana.org</a> razvio:
+													<a href="##">OpenBosniana OS</a> and
+													<a href="##">bosniana.org</a> developed by:
 													<a href="##">Denis Maslo</a>
         </p>
-        <p>
-          <i class="ri-mail-send-line"></i>
-          <a href="mailto:contact@bosniana.org">
-            <span class="text-light ml-1">Kontakt</span>
+
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Privatni email:
+          <span class="text-light ml-1">
+          <a href="mailto:dennios@duck.com">
+             dennios@duck.com
           </a>
+          </span>
         </p>
         <p>
           <i class="ri-mail-send-line"></i>
           <a href="mailto:openbosniana_dev@bosniana.org">
-            <span class="text-light ml-1">Razvoj</span>
+            <span class="text-light ml-1">Razvojni programeri</span>
+          </a>
+        </p>
+        <p>
+          <i class="ri-mail-send-line"></i>
+          <a href="mailto:info@bosniana.org">
+            <span class="text-light ml-1">Informacije</span>
           </a>
         </p>
         <div class="linija-footer mt-1 mb-1"></div>
