--- a/bs/index.html
+++ b/bs/index.html
@@ -84,7 +84,7 @@
     </style>
 
 
-<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org/bs",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/bs/bs/",                        "name": "OpenBosniana OS"                    }                }                    ]    }</script>
+<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org/bs",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org/bs/",                        "name": "OpenBosniana OS"                    }                }                    ]    }</script>
 
 
 </head>
