--- a/bs/downloads/index.html
+++ b/bs/downloads/index.html
@@ -24,12 +24,12 @@
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="rss.xml">
     <link rel="manifest" href="assets/favicon/manifest.json">
     <meta property="og:title" content="">
-    <meta property="og:url" content="http://192.168.0.7:4000/bs/downloads/">
+    <meta property="og:url" content="https://bosniana.org/bs/downloads/">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
 
-    <link rel="canonical" href="http://192.168.0.7:4000/bs/downloads/">
+    <link rel="canonical" href="https://bosniana.org/bs/downloads/">
     <link rel="alternate" type="application/rss+xml" title="OpenBosniana OS" href="/rss.xml">
 
     <meta property="og:url" content="https://bosniana.org/">
@@ -84,7 +84,7 @@
     </style>
     
 
-<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "http://192.168.0.7:4000",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "http://192.168.0.7:4000/bs/",                        "name": "OpenBosniana OS"                    }                }                                                                                                            ,{                    "@type": "ListItem",                    "position": 3,                    "item": {                        "@id": "http://192.168.0.7:4000/bs/downloads/",                        "name": "Preuzimanja"                    }                }                    ]    }</script>
+<script type="application/ld+json">    {        "@context": "http://schema.org",        "@type": "BreadcrumbList",        "itemListElement": [            {                "@type": "ListItem",                "position": 1,                "item": {                    "@id": "https://bosniana.org/bs/",                    "name": "OpenBosniana OS"                }            }                                                                                                                                                                                                                ,{                    "@type": "ListItem",                    "position": 2,                    "item": {                        "@id": "https://bosniana.org//bs/",                        "name": "OpenBosniana OS"                    }                }                                                                                                            ,{                    "@type": "ListItem",                    "position": 3,                    "item": {                        "@id": "https://bosniana.org//bs/downloads/",                        "name": "Preuzimanja"                    }                }                    ]    }</script>
 
 
 </head>
@@ -100,11 +100,12 @@
         <i class="ri-menu-unfold-3-fill" id="dropdownIcon"></i>
         <div class="nav-dropdown-content navbar-color">
             <p>Nedavne promjene</p>
-            <a href="https://bosniana.org/bs/blog/edu-112024/">Release Notes</a>
-            <a href="https://bosniana.org/bs/downloads/">Downloads</a>
+            <a href="https://bosniana.org/bs/blog/edu-112024/">Bilješke o izdanju | EDU</a>
+            <a href="https://bosniana.org/bs/blog/home-092024/">Bilješke o izdanju | HOME</a>
+            <a href="https://bosniana.org/bs/downloads/">Preuzimanja</a>
             <p></p>
-            <a href="https://bosniana.org/bs/wiki/installation-guide/" target="blank">Installation Guide</a>
-            <a href="https://bosniana.org/bs/wiki/">Documentation</a>
+            <a href="https://bosniana.org/bs/wiki/installation-guide/" target="blank">Vodič za instalaciju</a>
+            <a href="https://bosniana.org/bs/wiki/">Dokumentacija</a>
         </div>
     </button>
      <div class="container-fluid">
@@ -327,20 +328,28 @@
       <div class="sponsor">
         <div class="linija-dole mb-1"></div>
         <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center">
-													<a href="##">OpenBosniana OS</a> i 
-													<a href="##">bosniana.org</a> razvio: 
+													<a href="##">OpenBosniana OS</a> and 
+													<a href="##">bosniana.org</a> developed by: 
 													<a href="##">Denis Maslo</a>
         </p>
-        <p>
-          <i class="ri-mail-send-line"></i>
-          <a href="mailto:contact@bosniana.org">
-            <span class="text-light ml-1">Kontakt</span>
+
+        <p style="letter-spacing:1px;" class="pb-1 pt-1 text-white text-center"><i class="ri-mail-send-line"></i> Privatni email:
+          <span class="text-light ml-1">
+          <a href="mailto:dennios@duck.com">
+             dennios@duck.com
           </a>
+          </span>
         </p>
         <p>
           <i class="ri-mail-send-line"></i>
           <a href="mailto:openbosniana_dev@bosniana.org">
-            <span class="text-light ml-1">Razvoj</span>
+            <span class="text-light ml-1">Razvojni programeri</span>
+          </a>
+        </p>
+        <p>
+          <i class="ri-mail-send-line"></i>
+          <a href="mailto:info@bosniana.org">
+            <span class="text-light ml-1">Informacije</span>
           </a>
         </p>
         <div class="linija-footer mt-1 mb-1"></div>
